src/css/locales.less
@import "flexbox";

.locale-view {

  nav.select-locale {
    text-align: center;
    font-family: @df-sans;
    padding: 20px;

    a {
      color: black;
      font-weight: bold;

      &::after {
        padding: 0 10px;
      }
    }

    .active {
      color: @df-middle-gray;
    }
  }

  .race-container {
    .display-flex();
    .flex-wrap(wrap);

    @media @mobile {
      display: block;
    }
  }

  .race-block {
    .flex(0 1 33%);
    font-family: @df-sans;

    @media @tablet {
      .flex(1 1 50%);
    }

    @media @mobile {
      display: block;
    }

    h2 {
      margin: 3px 0;
      text-align: center;
      display: block;
      color: @df-middle-gray;
      font-family: @df-sans;
      font-weight: normal;
      font-size: 14px;
      text-transform: uppercase;
      letter-spacing: 1px;
    }

    .candidate-pair {
      margin: 8px;

      .candidate {
        width: 50%;
        float: left;
        padding: 10px;
      }

      .read-more {
        display: block;
        text-align: right;
        font-family: @df-sans;
        font-size: 12px;
      }
    }
  }

  .info-block {
    list-style-type: none;
    font-size: 14px;
    margin: 0;
    padding: 0;
  }

}

